--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>ping pong</title>
   </head>
   <body>
+    <div  class="container-fluid" id ="first">
+      <div class = "row">
+      </div>
+      <div class = "container-fluid" id ="second">
+          <div class="col-md-3-offset-5"id ="green">
+          <div class="col-md-9" id = "rest ">
+      </div>
 
+
+
+    </div>
 
 
 
