add text and color in the first container having the row containing ping pong and make it look like what is in the guide

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <title>ping pong</title>
   </head>
   <body>
+
     <div  class="container-fluid" id ="first">
+        <h1 id ="word">Ping pong</h1>
       <div class = "row">
       </div>
       <div class = "container-fluid" id ="second">
           <div class="col-md-3-offset-5"id ="green">
+          </div>
           <div class="col-md-9" id = "rest ">
-      </div>
+          </div>
+    </div>
 
 
 
