add the colours in the background and text as shownin the guide put the necessarry ids and open then in css and use it to align everything in the respeective positions

--- a/index.html
+++ b/index.html
@@ -9,20 +9,44 @@
   </head>
   <body>
 
-    <div  class="container-fluid" id ="first">
-        <h1 id ="word">Ping pong</h1>
-      <div class = "row">
-      </div>
-      <div class = "container-fluid" id ="second">
-          <div class="col-md-3-offset-5"id ="green">
+        <div  class="container-fluid" id="first">
+          <p id ="word">Ping pong</p>
+            <div class = "row">
+            </div>
+        </div>
+        <div class = "container-fluid" id="second">
+          <div class="row">
+            <div class="col-md-4"id="green">
+              <p id="ping">About Ping Pong</p>
+              <p>Created by:</p>
+              <p>kit fisto</p>
+              <p>Github username URL:</p>
+              <p>greensaber</p>
+              <p> Level 2 Test for</p>
+              <p> java</p>
+
+
+
+            </div>
+            <div class="col-md-8" id="grey">
+                <p>Lets play</p>
+                <p>Rules:</p>
+                <p>Ping Pong will count to your number from 1 with the following exprctations:</p>
+                  <ul>
+                      <li>Numbers divisible by 3 become "ping"</li>
+                      <li>Numbers divisible by 5 become "ping"</li>
+                      <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+                  </ul>
+                    <form id="text-form" class="text-center">
+                      <div class="form-group">
+                        <label for="text-Input">Enter your number here:</label>
+                        <input class="form-control" type="text" placeholder="add text" id="text-Input" required>
+                      </div>
+                      <button type="submit" class=" btn-primary"> Ping Pong! </button>
+                    </form>
+            </div>
           </div>
-          <div class="col-md-9" id = "rest ">
-          </div>
-    </div>
-
-
-
-    </div>
+        </div>
 
 
 
