add th right custom designs on the words under about ping pong by adding ids and designing them in css

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           <div class="row">
             <div class="col-md-4"id="green">
               <p id="ping">About Ping Pong</p>
-              <p>Created by:</p>
-              <p>kit fisto</p>
-              <p>Github username URL:</p>
-              <p>greensaber</p>
-              <p> Level 2 Test for</p>
-              <p> java</p>
+              <p id="created">Created by:</p>
+              <p id="kit">kit fisto</p>
+              <p id="git">Github username URL:</p>
+              <p id="saber">greensaber</p>
+              <p id="level"> Level 2 Test for:</p>
+              <p id="java"> java</p>
 
 
 
