adjust the words under lets play jst like the way we did under about moringa open up the attached ids in html in css and design then accordingly

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
             </div>
             <div class="col-md-8" id="grey">
-                <p>Lets play</p>
-                <p>Rules:</p>
+                <p id="lets">Lets play</p>
+                <p id="rules">Rules:</p>
                 <p>Ping Pong will count to your number from 1 with the following exprctations:</p>
                   <ul>
                       <li>Numbers divisible by 3 become "ping"</li>
@@ -47,14 +47,6 @@
             </div>
           </div>
         </div>
-
-
-
-
-
-
-
-
     <script   src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/third.js"></script>
   </body>
