open the js and start on the very first part of my BDD to display pong for 3

--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
               <p id="saber">greensaber</p>
               <p id="level"> Level 2 Test for:</p>
               <p id="java"> java</p>
-
-
-
             </div>
             <div class="col-md-8" id="grey">
                 <p id="lets">Lets play</p>
@@ -44,6 +41,7 @@
                       </div>
                       <button type="submit" class=" btn-primary"> Ping Pong! </button>
                     </form>
+                      <div id="result">
             </div>
           </div>
         </div>
