add yord code but separeted into front end and back end add the neccesary ids in html and use them in the js

--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
                       <li>Numbers divisible by 5 become "ping"</li>
                       <li>Numbers divisible by 3 and 5 become "pingpong"</li>
                   </ul>
-                    <form id="text-form" class="text-center">
+                    <div id="text-form">
+                    <form  class="text-center">
                       <div class="form-group">
                         <label for="text-Input">Enter your number here:</label>
                         <input class="form-control" type="text" placeholder="add text" id="text-Input" required>
                       </div>
                       <button type="submit" class=" btn-primary"> Ping Pong! </button>
                     </form>
-                      <div id="result">
+                      <ul id ="result"></ul>
+                    </div>
             </div>
           </div>
         </div>
