add google fonts and link them tn thehtml change the fonts of the work from such tht they can appear on our page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/third.css" rel="stylesheet" type="text/css">
-
+    <link href="css/animate.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Gloria+Hallelujah|Rajdhani" rel="stylesheet">
     <title>ping pong</title>
   </head>
   <body>
